# dolphiv2

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  config.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: mcp.md  technical-note.md
docs/benchmarks/: walk_forward_metrics.json  walk_forward_summary.md
docs/eval/: falsifier_quality.csv  falsifier_quality.json  falsifier_quality.md
docs/tui/: baseline_observations.md  baseline_snapshot_100cols.txt  baseline_snapshot_140cols.txt  baseline_snapshot_80cols.txt
dolphi/: __init__.py  api.py  banner.py  check.py  cli.py  config.py  mcp_server.py  models.py  profile_store.py  requirements.txt
dolphi/agents/: __init__.py  _common.py  bear_researcher.py  bull_researcher.py  debate.py  (+8 more)
examples/: .gitignore  01_evaluate_a_ticker.ipynb  nvda_discovery.md  quickstart.sh
scripts/: snapshot_tui.py
tests/: test_api.py  test_beneficiaries_llm.py  test_check.py  test_config.py  test_core_agents.py  test_data_fetcher.py  test_data_wrappers.py  test_debate.py  test_debate_allocator.py  test_debate_judge.py  test_decision_log.py  test_discovery_pipeline.py  test_eval.py  test_eval_report.py  test_fragility_allocator.py  test_llm_clients.py  test_mcp_server.py  test_per_ticker_analysts.py  test_pre_mortem.py  test_profile_store.py  test_reflection.py  test_theme_first_research.py  test_tui.py  test_universe_loader.py  test_walk_forward.py  test_workflow_smoke.py
(+60 files in other folders)
